Add last read message to chat member relation and add like count and is liked to post
